--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,15 @@
         }
 
         getData()
-        index.addObjects(objects, function (err, content) {
+        console.dir(objects)
+        index.addObjects([{
+          firstname: 'xing',
+          lastname: 'yakong'
+        }, {
+          firstname: 'liu',
+          lastanme: 'jian'
+        }
+        ], function (err, content) {
           console.log(content);
         });
 
