--- a/test/index.html
+++ b/test/index.html
@@ -19,10 +19,14 @@
             .then(res => {
               console.log('fetch ok')
               handleData(res.data)
-              // console.log(objects);
-              index.addObjects(objects, function (err, content) {
-                console.log(content);
-              });
+            })
+            .then(() => {
+              while (objects.length > 0) {
+                let arr = objects.splice(0, 1000)
+                index.addObjects(objects, function (err, content) {
+                  console.log(content);
+                });
+              }
             })
         }
         function handleData(data) {
