--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
             .then(() => {
               while (objects.length > 0) {
                 let arr = objects.splice(0, 1000)
-                index.addObjects(objects, function (err, content) {
+                index.addObjects(arr, function (err, content) {
                   console.log(content);
                 });
               }
