--- a/test/index.html
+++ b/test/index.html
@@ -25,7 +25,7 @@
               /* index.addObjects(objects, function (err, content) {
                 console.log(content);
               }); */
-              index.saveObjects([{
+              index.partialUpdateObject([{
                 objectID: '570',
                 img_url: "http://cdn.akamai.steamstatic.com/steam/apps/570/header.jpg"
               }], function(err, content) {
