--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,6 @@
       var client = algoliasearch("VICM0QATAN", "36fff9ff4adff96002e8219dbdecff1e");
       var index = client.initIndex('steamgame');
       var objects = [];
-      var imgUrlList = []
 
       function updateIndex() {
         function getData() {
@@ -22,29 +21,20 @@
               handleData(res.data)
             })
             .then(() => {
-              /* index.addObjects(objects, function (err, content) {
-                console.log(content);
-              }); */
-              index.partialUpdateObject([{
-                objectID: '570',
-                img_url: "http://cdn.akamai.steamstatic.com/steam/apps/570/header.jpg"
-              }], function(err, content) {
-                console.log(content)
-              })
+              while (objects.length > 0) {
+                let arr = objects.splice(0, 1000)
+                index.addObjects(arr, function (err, content) {
+                  console.log(content);
+                });
+              }
             })
         }
         function handleData(data) {
-          for (let i of Object.keys(data)) {
-            objects.push(i)
-            imgUrlList.push({
-              objectID: i,
-              img_url: 'http://cdn.akamai.steamstatic.com/steam/apps/' + i + '/header.jpg'
-            })
+          for (let i of Object.entries(data)) {
+            i[1].objectID = i[0]
+            objects.push(i[1])
           }
-          console.group('imgurl list')
-          console.dir(objects)
-          console.dir(imgUrlList)
-          console.groupEnd()
+          console.log('handle ok')
         }
 
         getData()
