upload index data

--- a/test/index.html
+++ b/test/index.html
@@ -21,12 +21,7 @@
               handleData(res.data)
             })
             .then(() => {
-              while (objects.length > 0) {
-                let arr = objects.splice(0, 1000)
-                index.addObjects(arr, function (err, content) {
-                  console.log(content);
-                });
-              }
+              index.addObjects(objects, (err, content) => console.log(content))
             })
         }
         function handleData(data) {
@@ -34,14 +29,13 @@
             i[1].objectID = i[0]
             objects.push(i[1])
           }
-          console.log('handle ok')
+          console.log('handle ok', objects)
         }
 
         getData()
 
       }
       document.addEventListener('DOMContentLoaded', updateIndex)
-      console.log(index)
     </script>
   </body>
 </html>
