--- a/test/index.html
+++ b/test/index.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js'></script>
-    <script>
-      var client = algoliasearch("VICM0QATAN", "36fff9ff4adff96002e8219dbdecff1e");
-      var index = client.initIndex('steamgame');
-      var objects = [];
-
-      function updateIndex() {
-        function getData() {
-          axios.get('https://steamspy.com/api.php?request=all')
-            .then(res => {
-              console.log('fetch ok')
-              handleData(res.data)
-            })
-            .then(() => {
-              index.addObjects(objects, (err, content) => console.log(content))
-            })
-        }
-        function handleData(data) {
-          for (let i of Object.entries(data)) {
-            i[1].objectID = i[0]
-            objects.push(i[1])
-          }
-          console.log('handle ok', objects)
-        }
-
-        getData()
-
-      }
-      document.addEventListener('DOMContentLoaded', updateIndex)
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.cacbacc7.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.c36346bd.js"></script></body></html>
