--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="./static/js/main.c16dbacd.js"></script>
+    <script type="text/javascript" src="./static/js/app.js"></script>
   </body>
 </html>
